starting xss post

--- a/_posts/2024-11-08-XSS.md
+++ b/_posts/2024-11-08-XSS.md
@@ -2,7 +2,7 @@
 title: XSS Cheat sheet
 date: 2024-11-08 18:30:45 +0100
 categories: [Cheat sheet, Web]
-tags: [attaque, web]
+tags: [attaque]
 ---
 
 ### Comming soon...
